[package]
name = "xtask"
publish = false               # xtask is not meant to be published
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
serde.workspace = true
serde_json.workspace = true
toml = { workspace = true }
tonic-prost-build = { workspace = true, features = ["cleanup-markdown"] }
prost-build = { workspace = true }
otap-df-pdata-otlp-model = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
