[package]
name = "config"
version = "0.3.0"
authors = ["Laurent Querel <l.querel@f5.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
receiver = { path = "../receiver" }
exporter = { path = "../exporter" }
processor = { path = "../processor" }
signal = { path = "../signal" }

serde = { version = "1.0.218", features = ["derive"] }
serde_yaml = "0.9.0"
thiserror = "2.0.12"
tracing = "0.1.41"
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
async-trait = "0.1.87"
tokio = { version = "1.44.0", features = ["rt-multi-thread"] }
