[package]
name = "engine"
version = "0.3.0"
authors = ["Laurent Querel <l.querel@f5.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
config = { path = "../config" }
receiver = { path = "../receiver" }
processor = { path = "../processor" }
exporter = { path = "../exporter" }
task = { path = "../task" }
signal = { path = "../signal" }
context = { path = "../context" }

thiserror = "1.0.30"
tracing = "0.1.30"
num_cpus = "1.13.1"
tokio = { version = "1.16.1", features = ["rt-multi-thread"] }
async-trait = "0.1.52"
futures = "0.3.21"
flume = "0.10.11"
