[package]
name = "exporter"
version = "0.3.0"
authors = ["Laurent Querel <l.querel@f5.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
signal = { path = "../signal" }
task = { path = "../task" }
context = { path = "../context" }

serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
thiserror = "1.0.30"
async-trait = "0.1.52"
tokio = { version = "1.16.1", features = ["rt-multi-thread", "macros"] }
futures = "0.3.21"
tracing = "0.1.30"
