[package]
name = "exporter"
version = "0.3.0"
authors = ["Laurent Querel <l.querel@f5.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
signal = { path = "../signal" }
task = { path = "../task" }
context = { path = "../context" }

serde = { version = "1.0.218", features = ["derive"] }
serde_yaml = "0.8.26"
thiserror = "2.0.12"
async-trait = "0.1.87"
tokio = { version = "1.44.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3.31"
tracing = "0.1.41"
