[package]
name = "receiver"
version = "0.3.0"
authors = ["Laurent Querel <l.querel@f5.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
task = { path = "../task" }
context = { path = "../context" }

serde = { version = "1.0.218", features = ["derive"] }
serde_yaml = "0.8.26"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["rt-multi-thread", "macros", "net"] }
async-trait = "0.1.87"
tracing = "0.1.41"
futures = "0.3.31"
tokio-stream = "0.1.17"
socket2 = { version="0.5.8", features = ["all"]}
maplit = "1.0.2"
flume = "0.11.1"

[build-dependencies]
tonic-build = "0.12.3"
