[package]
name = "signal"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["rt-multi-thread", "macros"] }
futures = "0.3.21"
flume = "0.10.11"
tracing = "0.1.30"
