[package]
name = "signal"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.44.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3.31"
flume = "0.11.1"
tracing = "0.1.41"
