[package]
name = "cli"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
kql_plugin = { version = "0.1.0", path = "../kql_plugin" }
ottl_plugin = { version = "0.1.0", path = "../ottl_plugin" }
intermediate_language = { version = "0.1.0", path = "../intermediate_language" }