[package]
name = "ottl_plugin"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
intermediate_language = { verison = "0.1.0", path = "../intermediate_language" }
pest = "2.8"
pest_derive = "2.8"