[package]
name = "data_engine_columnar"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
arrow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
datafusion = { workspace = true }
futures-core = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }

# workspace dependencies
otap-df-pdata = { path = "../../../otap-dataflow/crates/pdata" }
data_engine_expressions = { path = "../expressions" }


