[package]
name = "data_engine_columnar"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
arrow = { workspace = true, features = ["prettyprint"] }
async-trait = { workspace = true }
datafusion = { workspace = true }
futures-core = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }

otap-df-pdata = { path = "../../../otap-dataflow/crates/pdata" }
data_engine_expressions = { path = "../expressions" }


[dev-dependencies]
tokio = { workspace = true }