[package]
name = "data_engine_recordset_otlp_bridge"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }

data_engine_expressions = { path = "../expressions" }
data_engine_kql_parser = { path = "../kql-parser" }
data_engine_recordset = { path = "../engine-recordset" }

[dev-dependencies]
opentelemetry-proto = { workspace = true }
prost = { workspace = true }