[package]
name = "data_engine_recordset"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde_json = "1.0.140"

chrono = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }

data_engine_expressions = { path = "../expressions" }