[package]
name = "data_engine_recordset"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
hex = "0.4.3"
sha2 = "0.10.8"

chrono = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

data_engine_expressions = { path = "../expressions" }