[package]
name = "data_engine_expressions"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
caseless = "0.2.2"
serde_json = "1.0.140"

chrono = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }