[package]
name = "data_engine_ottl_parser"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
pest = { workspace = true }
pest_derive = { workspace = true }

data_engine_expressions = { path = "../expressions" }
data_engine_parser_abstractions = { path = "../parser-abstractions" }