[package]
name = "data_engine_parser_abstractions"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
pest = "2.8"
pest_derive = "2.8"

data_engine_expressions = { path = "../expressions" }

chrono = { workspace = true }
thiserror = { workspace = true }