[package]
name = "otap-df-admin"
description = "OTAP dataflow engine admin endpoints"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
otap-df-config = { path = "../config" }
otap-df-telemetry = { path = "../telemetry" }
otap-df-engine = { path = "../engine" }

thiserror = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["net", "rt-multi-thread"] }
tokio-util = { workspace = true }
axum = { version = "0.8.4" }
tower = "0.5.2"
chrono = { version = "0.4", features = ["serde"] }
