[package]
name = "otap-df-admin"
description = "OTAP dataflow engine admin endpoints"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
otap-df-config = { path = "../config" }
otap-df-state = { path = "../state" }
otap-df-telemetry = { path = "../telemetry" }
otap-df-engine = { path = "../engine" }

thiserror = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }

