[package]
name = "otap-df-admin"
description = "OTAP dataflow engine admin endpoints"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
otap-df-admin-types = { workspace = true }
otap-df-config = { workspace = true }
otap-df-state = { workspace = true }
otap-df-telemetry = { workspace = true }
otap-df-engine = { workspace = true }

thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
include_dir = { workspace = true }
mime_guess = { workspace = true }
