[package]
name = "otap-df-channel"
description = "Async channel implementations optimised for single-threaded async runtime"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
arrayvec = "0.7.6"