[package]
name = "otap-df-config"
description = "Configuration model for OTAP pipeline"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
miette = {workspace = true}

schemars = { version="0.9.0" }